fixed background color for KM collapsed sidebar

--- a/src/main/web/ontodia/styles/workspace/_accordion.scss
+++ b/src/main/web/ontodia/styles/workspace/_accordion.scss
@@ -35,7 +35,10 @@
 
   &--horizontal {
     border-right: 1px solid lightgray;
- //   background-color: #e9ecef96;
+
+    &.ontodia-accordion-item--collapsed {
+      background-color: $color-sidebar-bg;
+    }
 
     &:last-child {
       border-right-width: 0;
