--- a/src/main/web/ontodia/styles/workspace/_workspace.scss
+++ b/src/main/web/ontodia/styles/workspace/_workspace.scss
@@ -27,6 +27,11 @@
     flex: auto;
     overflow: hidden;
     flex-direction: column;
+
+    .ontodia-accordion-item--horizontal.ontodia-accordion-item--collapsed {
+
+      background-color: $color-km-bg;
+    }
   }
 
   &__main-panel {
