--- a/src/main/web/styling/app/_variables.scss
+++ b/src/main/web/styling/app/_variables.scss
@@ -15,6 +15,7 @@ $color-form-border: var(--color-form-border, rgba(29, 10, 112, 0.15));
 $color-header-bg: var(--color-header-bg, #1d0a6e);
 $color-footer-bg: var(--color-footer-bg, #1d0a6e);
 $colorMain-page-bg: var(--colorMain-page-bg, #ffffff);
+$color-km-bg: var(--color-km-bg, #ffffff);
 $color-popover-bg: var(--color-popover-bg, #4d3e8d);
 $color-sidebar-bg: var(--color-sidebar-bg, #e9ecef);
 $color-dashboardPage-bg: var(--color-dashboardPage-bg, #f6f6f6);
